# basic_math_operations

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  install.sh  install_macos.sh  setup.py
.github/workflows/: build.yml  tests.yml
src/: CMakeLists.txt  add_whole.asm  add_whole_same_length.asm  basic_math_operations.c  basic_math_operations.h  divide_whole_with_remainder.asm  multiply_whole.asm  remove_leading_zeroes.asm  strlen.asm  subtract_whole.asm  subtract_whole_same_length.asm
src/benchmark/: CMakeLists.txt  benchmark.cpp
src/python-module/: basic_math_operationsmodule.c  fix-version.cpp  module.c  setup.py
src/tests/: CMakeLists.txt  color.hpp  get_current_directory.hpp  get_terminal_size.hpp  test.cpp
src/tests/tests/add_whole/: expected.txt.REMOVED.git-id  input.txt.REMOVED.git-id
src/tests/tests/multiply_whole/: expected.txt.REMOVED.git-id  input.txt.REMOVED.git-id
src/tests/tests/subtract_whole/: expected.txt.REMOVED.git-id  input.txt.REMOVED.git-id
